--- a/pom.xml
+++ b/pom.xml
@@ -69,16 +69,16 @@
   </dependencies>
   <build>
     <plugins>
-       <plugin>
+      <!--   <plugin>
         <artifactId>maven-war-plugin</artifactId>
         <version>2.4</version>
         <configuration>
           <failOnMissingWebXml>false</failOnMissingWebXml>
         </configuration>
-      </plugin>
+      </plugin> -->
       
       <!-- this plugin install Wildfly on HEROKU -->
-        <!-- <plugin>
+         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-dependency-plugin</artifactId>
             <version>2.10</version>
@@ -103,19 +103,19 @@
                     </configuration>
                 </execution>
             </executions>
-        </plugin>-->
+        </plugin>
 
         <!-- tell application uses the above wildfly. -->
-        <!--  <plugin>
+         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-war-plugin</artifactId>
             <version>2.4</version>
             <configuration>
                 <failOnMissingWebXml>false</failOnMissingWebXml>
                 <outputDirectory>target/wildfly-9.0.1.Final/standalone/deployments</outputDirectory>
-                <warName>hktest</warName>
+                <warName>comanda-services</warName>
             </configuration>
-        </plugin>    -->   
+        </plugin>  
       
     </plugins>
   </build>
